<resources>
    <string name="app_name">PendejiFest</string>
    <string name="date_dev">81020016</string>
    <string name="user_nav">Me</string>
    <string name="add_friend_nav">Add friend</string>
    <string name="date_nav">Dates</string>
    <string name="events_nav">Events</string>
    <string name="gallery_nav">Gallery</string>
    <string name="about_nav">About...</string>
    <string name="signout_nav">Sign out</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="settings_nav">Settings</string>
    <string name="event_bar">Event</string>
    <string name="event_name">Event</string>
    <string name="event_date">Date</string>
    <string name="event_description">This is a event!</string>
    <string name="event_directionSign">Spot address: </string>
    <string name="event_infoSign">Event info</string>
    <string name="event_directionhowSign">How to get there?</string>
    <!-- Signup related strings -->
    <string name="signup_hint">Don\'t you have an account? <u>Sign up</u></string>
    <string name="signup_title">Please, fill the following fields</string>
    <string name="signup_email_hint">Enter your Email</string>
    <string name="signup_password_hint">Enter your password</string>
    <string name="signup_name_hint">Enter your name</string>
    <string name="signup_button">Sign up now</string>
    <string name="signup_progress">Registering...</string>

    <!-- Various strings -->
    <string name="dialog_negative_std">Cancel</string>
    <string name="dialog_positive_std">Accept</string>
    <!-- Error strings -->
    <string name="error_title">Ups!</string>
    <string name="friend_register_error">There has been an error trying to match with your buddy.</string>
    <!-- Friend code dialog -->
    <string name="friend_code_dialog_title">Enter code</string>
    <string name="friend_code_dialog_message">Type the code your friend gave to you</string>
    <string name="friend_code_dialog_positve">Add friend</string>
    <!-- New event activity -->
    <string name="new_event_edit">Name of your event...</string>
    <string name="new_event_title">New event</string>
    <string name="new_event_switch">My friends can invite someone</string>
    <string name="new_event_edit_date">Choose a date</string>
    <string name="new_event_edit_time">Choose a time</string>
    <string name="new_event_edit_description">Description of your event</string>
    <string name="new_event_edit_address">Add your address</string>
    <string name="new_event_edit_search_location">Search your address</string>
    <!-- Months -->
    <string name="month_1">January</string>
    <string name="month_2">February</string>
    <string name="month_3">March</string>
    <string name="month_4">April</string>
    <string name="month_5">May</string>
    <string name="month_6">June</string>
    <string name="month_7">July</string>
    <string name="month_8">August</string>
    <string name="month_9">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>
    <string name="month_12">December</string>

    <!-- Days -->
    <string name="day_1">Monday</string>
    <string name="day_2">Tuesday</string>
    <string name="day_3">Wednesday</string>
    <string name="day_4">Thursday</string>
    <string name="day_5">Friday</string>
    <string name="day_6">Saturday</string>
    <string name="day_7">Sunday</string>

</resources>
