<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_user"
        android:title="@string/user_nav"
        />
    <group>

        <item
            android:id="@+id/nav_date"
            android:title="@string/date_nav"
            />

        <item
            android:id="@+id/nav_events"
            android:title="@string/events_nav"
            />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/gallery_nav"
            />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings_nav"
            />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about_nav"
            />
    </group>
</menu>