<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.unam.ciencias.jcasas.pendejifest.SignupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/editTextNameSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_name_hint"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="203dp"
        android:layout_alignBottom="@+id/editTextNameSignup"
        android:layout_toRightOf="@+id/editTextNameSignup"
        android:layout_toEndOf="@+id/editTextNameSignup"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="177dp"
        android:layout_below="@+id/editTextNameSignup"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_password_hint"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="7dp"
        android:layout_alignBottom="@+id/editTextPass"
        android:layout_toRightOf="@+id/editTextPass"
        android:layout_toEndOf="@+id/editTextPass"
        android:id="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_email_hint"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="299dp"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="273dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="181dp" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:text="@string/signup_button"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:theme="@style/AppTheme.ButtonOK"
        />


</RelativeLayout>
